# origin

./: README.md
CMake/: README.md
CMake/Задача 1. Простейший проект/: CMakeLists.txt  README.md  main.cpp
CMake/Задача 2. Проект посложнее/: CMakeLists.txt  Equ_Triangle.cpp  Equ_Triangle.h  FIgure.cpp  Figure.h  Iso_Triangle.cpp  Iso_Triangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  README.md  Rect_Triangle.cpp  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Square.cpp  Triangle.cpp  Triangle.h  main.cpp
IDE/: README.md  Source.cpp
Исключения и обработка ошибок/: README.md
Исключения и обработка ошибок/Задача 1. Простое исключение/: README.md  main.cpp
Исключения и обработка ошибок/Задача 2. Исключения в конструкторах/: Equ_Triangle.cpp  Equ_Triangle.h  Error.cpp  Error.h  FIgure.cpp  Figure.h  Iso_Triangle.cpp  Iso_Triangle.h  Parallelogram.cpp  (+15 more)
Классы и объекты/: README,md  README.md
Многофайловые проекты и библиотеки/: README.md
ООП: абстракция и инкапсуляция/: README.md
ООП: наследование и полиморфизм/: README.md
Перегрузка операторов/: README.md
Препроцессор и макросы/: README.md
Сборка и подключение библиотек/: README.md
Сборка и подключение библиотек/Задача 4*. Иерархия классов в DLL и CMake/: CMakeLists.txt  FIgure.cpp  Iso_Triangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.h  README.md  Rect_Triangle.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Square.cpp  Square.h  Triangle.h  main.cpp
Симулятор гонок/: AirRace.cpp  AirRace.h  AirVehicle.cpp  AirVehicle.h  AllTerrainBoots.cpp  AllTerrainBoots.h  Broom.cpp  Broom.h  CMakeLists.txt  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  GroundRace.cpp  GroundRace.h  GroundVehicle.cpp  GroundVehicle.h  MagicCarpet.cpp  MagicCarpet.h  README.md  Race.cpp  Race.h  SpeedCamel.cpp  SpeedCamel.h  Vehicle.cpp  Vehicle.h  main.cpp
Структуры и перечисления/: README.md
(+85 files in other folders)
