cmake_minimum_required (VERSION 3.21.0)

project (my_second_cmake_project)

add_executable (my_second_cmake_program 
main.cpp 
Equ_Triangle.cpp Equ_Triangle.h 
Figure.cpp Figure.h 
Iso_Triangle.cpp Iso_Triangle.h
Parallelogram.cpp Parallelogram.h
Quadrangle.cpp Quadrangle.h
Rect_Triangle.cpp Rect_Triangle.h
Rectangle.cpp Rectangle.h
Rhombus.cpp Rhombus.h
Square.cpp Square.h
Triangle.cpp Triangle.h
)